fix: remove dynamic prefix variable for swagger merging
